@@ -51,7 +51,7 @@ dnl it too, or it will never make it into the spec file!
 
 LIBPLANNER_REQUIRED=0.10
 GLIB_REQUIRED=2.0.4
-GTK_REQUIRED=2.0.3
+GTK_REQUIRED=2.4.0
 LIBGNOMECANVAS_REQUIRED=2.0.1
 LIBGNOMEUI_REQUIRED=2.0.1
 LIBGLADE_REQUIRED=2.0.0
