@@ -139,7 +139,7 @@
 			  <property name="max_saved">10</property>
 			  <property name="directory_entry">False</property>
 			  <property name="modal">False</property>
-			  <property name="use_filechooser">False</property>
+			  <property name="use_filechooser">True</property>
 
 			  <child internal-child="entry">
 			    <widget class="GtkEntry" id="combo-entry3">
@@ -228,7 +228,7 @@
 			  <property name="history_id">mg-html-plugin-file</property>
 			  <property name="max_saved">10</property>
 			  <property name="browse_dialog_title" translatable="yes">Save to HTML File</property>
-			  <property name="directory_entry">False</property>
+			  <property name="directory_entry">True</property>
 			  <property name="modal">False</property>
 			  <property name="use_filechooser">False</property>
 
